--- a/public/css/style.css
+++ b/public/css/style.css
@@ -37,7 +37,7 @@ div.main:after {
 }
 div.main-inner {
   max-width: 1000px;
-  margin: 10px auto 0 auto;
+  margin: 6px auto 0 auto;
 }
 .margin, .margin-const {
   margin-left: 10px;
@@ -127,7 +127,7 @@ ul.navbar-nav > li {
 }
 ul.navbar-nav li.nav-brand {
   display: flex;
-  height: 58px;
+  height: 54px;
   margin: 0 12px;
   justify-content: center;
   align-items: center;
@@ -135,11 +135,11 @@ ul.navbar-nav li.nav-brand {
 }
 ul.navbar-nav li > a {
   display: block;
-  line-height: 58px;
+  line-height: 54px;
   text-decoration: none;
 }
 ul.navbar-nav li.nav-item a {
-  min-width: 30px;
+  min-width: 24px;
   padding: 0 18px;
   border-bottom: 0 solid transparent;
   font-size: 14px;
@@ -151,12 +151,12 @@ ul.navbar-nav li.nav-item a {
   -ms-transition: border-color 0.2s, background-color 0.2s;
 }
 ul.navbar-nav li.nav-item a:hover {
-  height: 56px;
+  height: 52px;
   border-bottom: 2px solid #999;
   background: #fafafa;
 }
 ul.navbar-nav li.nav-item.active a {
-  height: 56px;
+  height: 52px;
   border-bottom: 2px solid #666;
   background: #f2f2f2;
 }
@@ -164,7 +164,7 @@ ul.navbar-nav li.nav-brand a {
   font-size: 22px;
 }
 ul.navbar-nav li.nav-input {
-  line-height: 56px;
+  line-height: 52px;
   padding: 0 16px;
 }
 ul.navbar-nav li.nav-button {
@@ -181,7 +181,7 @@ ul.navbar-nav li.nav-button.active {
   background: #f2f2f2;
 }
 button#avatar-button {
-  height: 58px;
+  height: 54px;
   padding: 0 16px;
   border: none;
   background: transparent;
@@ -197,7 +197,7 @@ button#avatar-button img {
 div.nav-dialog {
   display: none;
   position: absolute;
-  top: 58px;
+  top: 54px;
 	right: 2px;
   z-index: 1;
   border: 1px solid #eeeeee;
@@ -501,6 +501,7 @@ button.button {
   border: none;
   border-radius: 4px;
   box-sizing: border-box;
+  font-family : inherit;
   outline: none;
   cursor: pointer;
   transition: background-color 0.2s;
