--- a/public/css/style.css
+++ b/public/css/style.css
@@ -158,7 +158,7 @@ ul.navbar-nav li.nav-item a:hover {
 ul.navbar-nav li.nav-item.active a {
   height: 52px;
   border-bottom: 2px solid #666;
-  background: #f2f2f2;
+  background: #fafafa;
 }
 ul.navbar-nav li.nav-brand a {
   font-size: 22px;
@@ -795,7 +795,7 @@ ul.user-statuses li a:hover {
 }
 ul.user-statuses li.active a {
   border-left: 2px solid #666;
-  background: #f2f2f2;
+  background: #fafafa;
 }
 ul.user-statuses span.status-count {
   float: right;
