--- a/public/css/style.css
+++ b/public/css/style.css
@@ -15,7 +15,7 @@ body {
   background: #fafafa url("../images/background-noize.png");
   color: #555;
   font-size: 16px;
-  font-family: "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
+  font-family: "-apple-system", "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
 }
 div#app {
   min-height: 100%;
@@ -321,6 +321,7 @@ div.copyright {
   }
   ul.user-statuses li {
     width: 25%;
+    border: none !important;
     text-align: center;
   }
   ul.user-statuses li a {
@@ -354,259 +355,6 @@ div.copyright {
   .hidden-lg-below {
     display: none;
   }
-}
-
-/* #endregion */
-
-/* #region alert */
-div.alert {
-  position: relative;
-  margin: 10px 0;
-  padding: 8px 36px 8px 12px;
-  overflow-wrap: break-word;
-  border-radius: 2px;
-  background: #cccccc;
-  font-size: 14px;
-}
-div.alert .alert-close {
-  opacity: 0.7;
-  position: absolute;
-  top: 10px;
-  right: 15px;
-  color: inherit;
-  cursor: pointer;
-  transition: opacity 0.3s;
-	-moz-transition: opacity 0.3s;
-	-webkit-transition: opacity 0.3s;
-	-o-transition: opacity 0.3s;
-	-ms-transition: opacity 0.3s;
-}
-div.alert .alert-close:hover {
-  opacity: 1;
-}
-div.alert p.text {
-  margin: 0;
-}
-div.alert-success {
-  background: #def2de;
-	color: #42a942;
-}
-div.alert.alert-success .alert-close line {
-  stroke: #42a942;
-}
-div.alert-danger {
-  background: #f2dede;
-	color: #a94442;
-}
-div.alert.alert-danger .alert-close line {
-  stroke: #a94442;
-}
-
-/* #endregion */
-
-/* #region height */
-.height-small {
-  height: 50px;
-}
-.height-medium {
-  height: 100px;
-}
-.height-large {
-  height: 150px;
-}
-
-/* #endregion */
-
-/* #region UI */
-/* layout */
-div.form-compact {
-  max-width: 500px;
-  padding: 16px 20px;
-  box-sizing: border-box;
-}
-div.form-group {
-  padding: 6px 0;
-}
-form.search {
-  margin: 8px 10px;
-}
-
-/* string */
-h2.form-title {
-  margin: 0 0 6px 0;
-  padding-bottom: 12px;
-  border-bottom: 1px dashed #ccc;
-  font-size: 14px;
-  font-weight: normal;
-  text-align: center;
-}
-label.label {
-  display: block;
-  margin-bottom: 4px;
-  font-size: 14px;
-}
-.help-block p {
-  margin: 4px 0 0 0;
-  color: #db3333;
-  font-size: 14px;
-}
-p.supplement-title {
-  font-size: 12px;
-  text-align: center;
-}
-p.supplement-title a:hover {
-  text-decoration: underline;
-}
-p.supplement-text {
-  margin: 0;
-  font-size: 12px;
-  text-align: right;
-}
-p.supplement-text a {
-  color: #db3333;
-}
-p.supplement-text a:hover {
-  color: #c32222;
-  text-decoration: underline;
-}
-
-/* text */
-input.text {
-  width: 100%;
-  padding: 10px 12px;
-  border: none;
-  border-radius: 4px;
-  box-sizing: border-box;
-  background: #f1f1f1;
-  color: inherit;
-  font-size: 14px;
-  outline: none;
-  transition: background-color 0.2s;
-	-moz-transition: background-color 0.2s;
-	-webkit-transition: background-color 0.2s;
-	-o-transition: background-color 0.2s;
-  -ms-transition: background-color 0.2s;
-  cursor: text;
-  vertical-align: middle;
-}
-input.text:focus {
-  background: #e6e6e6;
-}
-
-/* button */
-button.button {
-  width: 100%;
-  margin: 2px 0;
-  padding: 8px 12px;
-  border: none;
-  border-radius: 4px;
-  box-sizing: border-box;
-  font-family : inherit;
-  outline: none;
-  cursor: pointer;
-  transition: background-color 0.2s;
-	-moz-transition: background-color 0.2s;
-	-webkit-transition: background-color 0.2s;
-	-o-transition: background-color 0.2s;
-  -ms-transition: background-color 0.2s;
-}
-button.auto {
-  width: auto !important;
-}
-button.const-height {
-  height: 36px;
-}
-button.button:disabled {
-	background: #ccc;
-	color: #fafafa;
-	cursor: default;
-}
-button.button:disabled:hover { 
-  background: #ccc;
-  color: #fafafa;
-}
-button.button-info {
-	background: #3598db;
-	color: #fafafa;
-}
-button.button-info:hover {
-	background: #2283c3;
-}
-button.button-info-disabled {
-	background: #2283c3 !important;
-}
-button.button-success {
-	background: #5cbb2d;
-	color: #fafafa;
-}
-button.button-success:hover {
-	background: #51a428;
-}
-button.button-success-disabled {
-	background: #51a428 !important;
-}
-button.button-danger {
-	background: #db3333;
-	color: #fafafa;
-}
-button.button-danger:hover {
-	background: #c32222;
-}
-button.button-danger-disabled {
-	background: #c32222 !important;
-}
-
-/* checkbox */
-div.checkbox input {
-  vertical-align: middle;
-}
-div.checkbox span {
-  font-size: 14px;
-}
-
-/* select */
-select.search-select {
-  height: 36px;
-  padding: 6px;
-  border: 1px solid #ccc;
-  border-radius: 4px;
-  color: inherit;
-  font-size: 12px;
-  outline: none;
-  transition: border-color 0.2s;
-	-moz-transition: border-color 0.2s;
-	-webkit-transition: border-color 0.2s;
-	-o-transition: border-color 0.2s;
-  -ms-transition: border-color 0.2s;
-}
-select.search-select:focus {
-  border-color: #aaa;
-}
-
-select.status-select {
-  padding: 6px 12px;
-  border-radius: 2px;
-  font-size: 12px;
-  outline: none;
-  cursor: pointer;
-  transition: background-color 0.2s, border-color 0.2s;
-	-moz-transition: background-color 0.2s, border-color 0.2s;
-	-webkit-transition: background-color 0.2s, border-color 0.2s;
-	-o-transition: background-color 0.2s, border-color 0.2s;
-  -ms-transition: background-color 0.2s, border-color 0.2s;
-  appearance: none;
-  -moz-appearance: none;
-  -webkit-appearance: none;
-}
-select.status-select.active {
-	background: #db3333;
-	border: 1px solid #db3333;
-	color: #fafafa;
-}
-select.status-select option {
-	background: #ffffff;
-	color: #333333;
-	cursor: pointer;
 }
 
 /* #endregion */
@@ -727,6 +475,7 @@ div.introduct div.capture img {
 /* #region user-infomation */
 div.user-profile {
   padding: 0 12px;
+  border-bottom: 1px solid #eaeaea;
   text-align: center;
 }
 div.user-profile div.avatar-box {
@@ -736,7 +485,6 @@ div.user-profile div.avatar-box {
   height: auto;
   margin: 12px auto;
   overflow: hidden;
-  border: 4px solid #ccc;
   border-radius: 100%;
 }
 div.user-profile div.avatar-box img#avatar {
@@ -771,55 +519,12 @@ div.user-profile p.created {
   font-size: 12px;
 }
 
-ul.user-statuses {
-  list-style: none;
-  margin: 0;
-	padding-left: 0;
-}
-ul.user-statuses li a {
-  display: block;
-  padding: 10px 12px;
-  border-top: 1px solid #eaeaea;
-  border-left: 0px solid transparent;
-  box-sizing: border-box;
-  font-size: 14px;
-  transition: background-color 0.2s, border 0.2s;
-	-moz-transition: background-color 0.2s, border 0.2s;
-	-webkit-transition: background-color 0.2s, border 0.2s;
-	-o-transition: background-color 0.2s, border 0.2s;
-  -ms-transition: background-color 0.2s, border 0.2s;
-}
-ul.user-statuses li a:hover {
-  border-left: 2px solid #999;
-  background: #fafafa;
-}
-ul.user-statuses li.active a {
-  border-left: 2px solid #666;
-  background: #fafafa;
-}
-ul.user-statuses span.status-count {
-  float: right;
-}
-ul.user-statuses span.status-count:after {
-  display: block;
-	clear: both;
-	content: "";
-}
-
 /* #endregion */
 
 /* #region statuses */
 div.statuses > div.status {
   padding: 6px 12px;
   border-bottom: 1px solid #eaeaea;
-  transition: background-color 0.2;
-	-moz-transition: background-color 0.2s;
-	-webkit-transition: background-color 0.2s;
-	-o-transition: background-color 0.2s;
-  -ms-transition: background-color 0.2s;
-}
-div.status:hover {
-  background: #fafafa;
 }
 div.status-header p {
   display: table-cell;
@@ -846,6 +551,13 @@ div.status p.text {
 div.status div.status-body {
   padding: 6px 4px;
   border: 1px solid #eee;
+  transition: background-color 0.2;
+	-moz-transition: background-color 0.2s;
+	-webkit-transition: background-color 0.2s;
+	-o-transition: background-color 0.2s;
+  -ms-transition: background-color 0.2s;
+}
+div.status div.status-body:hover {
   background: #fafafa;
 }
 div.status p.date {
@@ -917,3 +629,19 @@ table.music-table td.action-cell {
 }
 
 /* #endregion */
+
+
+ul.setting-list span.right-icon {
+  margin-right: 6px;
+  transition: margin-right 0.2s;
+	-moz-transition: margin-right 0.2s;
+	-webkit-transition: margin-right 0.2s;
+	-o-transition: margin-right 0.2s;
+  -ms-transition: margin-right 0.2s;
+}
+ul.setting-list li a:hover span.right-icon {
+  margin-right: 0;
+}
+ul.setting-list li.active a span.right-icon {
+  margin-right: 0;
+}
