--- a/public/css/template.css
+++ b/public/css/template.css
@@ -98,19 +98,19 @@ ul.list li span.right-icon:after {
 /* #region UI.Form */
 div.form-compact {
   max-width: 500px;
-  padding: 12px 20px;
+  padding: 2px 20px;
   box-sizing: border-box;
 }
 div.form-group {
-  padding: 6px 0;
+  margin: 10px 0;
 }
 form.search {
   margin: 8px 10px;
 }
 
 h2.form-title {
-  margin: 0 0 6px 0;
-  padding: 0 0 8px 0;
+  margin: 0;
+  padding: 8px 0;
   border-bottom: 1px dashed #ccc;
   font-size: 14px;
   font-weight: normal;
@@ -118,7 +118,7 @@ h2.form-title {
 }
 label.label {
   display: block;
-  margin-bottom: 4px;
+  margin: 4px 0;
   font-size: 14px;
 }
 .help-block p {
@@ -134,7 +134,7 @@ p.supplement-title a:hover {
   text-decoration: underline;
 }
 p.supplement-text {
-  margin: 0;
+  margin: 6px 0 0 0;
   font-size: 12px;
   text-align: right;
 }
