--- a/public/css/template.css
+++ b/public/css/template.css
@@ -211,26 +211,33 @@ button.button-danger-disabled {
 /* #endregion */
 /* #region UI.Text */
 input.text {
+  vertical-align: middle;
+}
+textarea.text {
+  resize: none;
+}
+input.text, textarea.text {
   width: 100%;
-  padding: 10px 12px;
+  padding: 8px 12px;
   border: none;
   border-radius: 4px;
   box-sizing: border-box;
   background: #f1f1f1;
   color: inherit;
+  font-family: inherit;
   font-size: 14px;
   outline: none;
+  cursor: text;
   transition: background-color 0.2s;
 	-moz-transition: background-color 0.2s;
 	-webkit-transition: background-color 0.2s;
 	-o-transition: background-color 0.2s;
   -ms-transition: background-color 0.2s;
-  cursor: text;
-  vertical-align: middle;
 }
-input.text:focus {
+input.text:focus, textarea.text:focus {
   background: #e6e6e6;
 }
+
 /* #endregion */
 /* #region UI.CheckBox */
 div.checkbox input {
