--- a/public/css/style.css
+++ b/public/css/style.css
@@ -192,7 +192,7 @@ button#avatar-button {
 button#avatar-button img {
   width: 32px;
   height: 32px;
-  border-radius: 100%;
+  /* border-radius: 100%; */
 }
 div.nav-dialog {
   display: none;
@@ -497,7 +497,7 @@ div.introduct div.capture img {
 
 /* #region user-infomation */
 div.user-profile {
-  padding: 0 12px;
+  padding: 8px 12px;
   border-bottom: 1px solid #eaeaea;
   text-align: center;
 }
@@ -506,7 +506,7 @@ div.user-profile div.avatar-box {
   min-width: 90px;
   max-width: 112px;
   height: auto;
-  margin: 12px auto;
+  margin: 4px auto;
   overflow: hidden;
   border-radius: 100%;
 }
@@ -526,20 +526,24 @@ div.user-profile div.avatar-box img.avatar:hover {
   transform: scale(1.1) rotate(6deg);
 }
 div.user-profile p {
-  font-size: 14px;
+  margin: 0 0 6px 0;
 }
 div.user-profile p.name {
-  margin-top: 0;
-  margin-bottom: 8px;
+  margin-top: 12px;
+  font-size: 14px;
 }
 div.user-profile p.description {
-  margin-top: 8px;
+  color: #777;
+  font-size: 12px;
 }
 div.user-profile p.created {
   margin-top: 18px;
-  margin-bottom: 10px;
+  margin-bottom: 0;
   color: #777;
   font-size: 12px;
+}
+div.event-buttons {
+  margin-top: 6px;
 }
 
 /* #endregion */
@@ -557,7 +561,7 @@ div.status-header p {
 div.status p.avatar img {
   width: 32px;
   height: 32px;
-  border-radius: 100%;
+  /* border-radius: 100%; */
   transition: opacity 0.2s;
 	-moz-transition: opacity 0.2s;
 	-webkit-transition: opacity 0.2s;
