--- a/public/css/template.css
+++ b/public/css/template.css
@@ -312,6 +312,7 @@ select.status-select option {
   border-radius: 2px;
   font-size: 12px;
   padding: 5px 8px 4px;
+  opacity: 0.8;
 }
 .tooltip .tooltip-arrow {
   width: 0;
