--- a/public/css/style.css
+++ b/public/css/style.css
@@ -305,6 +305,8 @@ div.copyright {
     margin: 0 !important;
   }
   .margin .section {
+    margin-bottom: 0;
+    box-shadow: none;
     border-bottom: 1px solid #eaeaea;
     border-radius: 0 !important;
   }
