--- a/public/css/style.css
+++ b/public/css/style.css
@@ -151,8 +151,8 @@ ul.navbar-nav li > a {
   text-decoration: none;
 }
 ul.navbar-nav li.nav-item a {
-  min-width: 24px;
-  padding: 0 18px;
+  min-width: 32px;
+  padding: 0 14px;
   border-bottom: 0 solid transparent;
   font-size: 14px;
   text-align: center;
@@ -219,7 +219,7 @@ div.nav-dialog {
 ul.dialog-group {
   list-style: none;
   margin: 0;
-  padding: 6px 0;
+  padding: 4px 0;
 }
 ul.dialog-group:nth-child(n + 2) {
 	border-top: 1px solid #eeeeee;
@@ -227,7 +227,7 @@ ul.dialog-group:nth-child(n + 2) {
 li.dialog-item a {
   display: block;
   min-width: 140px;
-  padding: 8px 16px;
+  padding: 10px 16px;
   color: #666;
   font-size: 12px;
   text-decoration: none;
@@ -295,7 +295,7 @@ div.copyright {
 /* 460px以下 */
 @media (max-width: 460px) {
   .hidden-sm-below {
-    display: none;
+    display: none !important;
   }
 
   div.main-inner {
@@ -318,6 +318,23 @@ div.copyright {
     box-shadow: none;
     border-bottom: 1px solid #eaeaea;
   }
+  
+  div.introduct:nth-child(n + 2) {
+    margin-top: 0 !important;
+  }
+}
+/* 699px以上 */
+@media (min-width: 699px) {
+  .hidden-md-above {
+    display: none;
+  }
+}
+/* 698px以下 */
+@media (max-width: 698px) {
+  .hidden-md-below {
+    display: none;
+  }
+
   ul.navbar-nav li.nav-item > a {
     padding: 0 12px;
     line-height: normal;
@@ -332,18 +349,6 @@ div.copyright {
   .nav-indention::before {
     white-space: pre;
     content: "\A";
-  }
-}
-/* 681px以上 */
-@media (min-width: 681px) {
-  .hidden-md-above {
-    display: none;
-  }
-}
-/* 680px以下 */
-@media (max-width: 680px) {
-  .hidden-md-below {
-    display: none;
   }
 
   div.sidebar {
@@ -440,7 +445,7 @@ p.thats-all {
 
 /* #region welcome */
 div.banner {
-  padding: 48px 0;
+  padding: 40px 0 0 0;
   background-image: url('../images/banner-karaoke.jpeg');
   background-position: center;
   background-size: cover;
@@ -452,6 +457,7 @@ div.banner img {
   border-radius: 100%;
 }
 div.banner h1.title {
+  margin: 18px 0;
   font-weight: normal;
   text-shadow: 1px 1px 1px #666;
 }
@@ -462,22 +468,23 @@ div.banner p.text {
 }
 
 div.prompt {
+  margin-top: 36px;
   padding: 24px;
-  background: #232323;
+  background: rgba(0, 0, 0, 0.7);
   text-align: center;
 }
 
 div.introducts {
-  margin-top: 64px;
-  margin-bottom: 64px;
+  margin-top: 32px;
+  margin-bottom: 48px;
 }
 div.introduct {
   max-width: 960px;
   margin: 0 auto;
-  padding: 8px 12px;
+  padding: 6px 8px;
 }
 div.introduct:nth-child(n + 2) {
-  margin-top: 32px;
+  margin-top: 24px;
 }
 div.introduct:after {
   display: block;
