--- a/public/css/template.css
+++ b/public/css/template.css
@@ -1,4 +1,57 @@
 
+/* #region fixity */
+a {
+  color: inherit;
+  text-decoration: none;
+}
+i {
+  text-align: center;
+  min-width: 18px;
+}
+/* #endregion */
+
+/* #region auxiliary */
+.f12 {
+  font-size: 12px;
+}
+.center {
+  text-align: center;
+}
+.border {
+  border-top: 1px solid #eaeaea;
+}
+.height-small {
+  height: 50px;
+}
+.height-medium {
+  height: 100px;
+}
+.height-large {
+  height: 150px;
+}
+a.default-link:hover {
+  color: #c32222 !important;
+  text-decoration: underline;
+}
+a.default-link.on-color {
+  color: #db3333;
+}
+/* #endregion */
+
+/* #region section */
+.section {
+  margin: 0 auto 10px auto;
+  overflow: hidden;
+  border-radius: 4px;
+  box-shadow: 0px 0px 4px 2px #eee;
+  background: #fff;
+  word-wrap: break-word;
+}
+.section.section-padding {
+  padding: 10px 12px;
+}
+/* #endregion */
+
 /* #region alert */
 div.alert {
   position: relative;
@@ -44,24 +97,6 @@ div.alert.alert-danger .alert-close line {
 }
 /* #endregion */
 
-/* #region border */
-.border {
-  border-top: 1px solid #eaeaea;
-}
-/* #endregion */
-
-/* #region height */
-.height-small {
-  height: 50px;
-}
-.height-medium {
-  height: 100px;
-}
-.height-large {
-  height: 150px;
-}
-/* #endregion */
-
 /* #region list */
 ul.list {
   list-style: none;
@@ -99,59 +134,9 @@ ul.list li span.right-icon:after {
 	clear: both;
 	content: "";
 }
-
-@media (max-width: 698px) {
-  ul.list.list-flex {
-    display: flex;
-  }
-  ul.list.list-flex li {
-    border: none;
-    text-align: center;
-  }
-  ul.list.list-flex li:first-child:nth-last-child(1) ~ li,
-  ul.list.list-flex li:first-child:nth-last-child(1) {
-    width: 100%;
-  }
-  ul.list.list-flex li:first-child:nth-last-child(2) ~ li,
-  ul.list.list-flex li:first-child:nth-last-child(2) {
-    width: 50%;
-  }
-  ul.list.list-flex li:first-child:nth-last-child(3) ~ li,
-  ul.list.list-flex li:first-child:nth-last-child(3) {
-    width: 33.3333%;
-  }
-  ul.list.list-flex li:first-child:nth-last-child(4) ~ li,
-  ul.list.list-flex li:first-child:nth-last-child(4) {
-    width: 25%;
-  }
-  ul.list.list-flex li a {
-    padding: 10px 2px;
-    border-bottom: 0 solid transparent;
-    transition: background-color 0.2s, border-color 0.2s;
-    -moz-transition: background-color 0.2s, border-color 0.2s;
-    -webkit-transition: background-color 0.2s, border-color 0.2s;
-    -o-transition: background-color 0.2s, border-color 0.2s;
-    -ms-transition: background-color 0.2s, border-color 0.2s;
-  }
-  ul.list.list-flex li a:hover {
-    border-left: none;
-    border-bottom: 2px solid #999;
-  }
-  ul.list.list-flex li.active a {
-    border-left: none;
-    border-bottom: 2px solid #666;
-  }
-  ul.list.list-flex li span.right-icon {
-    float: none;
-  }
-  ul.list.list-flex li span.right-icon::before {
-    white-space: pre;
-    content: "\A";
-  }
-}
 /* #endregion */
 
-/* #region UI.Form */
+/* #region ui.form */
 form.form {
   margin: 10px;
 }
@@ -198,7 +183,7 @@ p.note {
   font-size: 14px;
 }
 /* #endregion */
-/* #region UI.Button */
+/* #region ui.button */
 button.button {
   width: 100%;
   margin: 2px 0;
@@ -269,7 +254,7 @@ button.button-danger-disabled {
 	background: #c32222 !important;
 }
 /* #endregion */
-/* #region UI.Text */
+/* #region ui.text */
 input.text {
   vertical-align: middle;
 }
@@ -299,7 +284,7 @@ input.text:focus, textarea.text:focus {
 }
 
 /* #endregion */
-/* #region UI.CheckBox */
+/* #region ui.checkBox */
 div.checkbox input {
   vertical-align: middle;
 }
@@ -307,7 +292,7 @@ div.checkbox span {
   font-size: 14px;
 }
 /* #endregion */
-/* #region UI.Select */
+/* #region ui.select */
 select.select {
   height: 36px;
   padding: 6px;
@@ -353,7 +338,7 @@ select.status-select option {
 }
 /* #endregion */
 
-/* #region Tooltip */
+/* #region tooltip */
 .tooltip {
   display: block !important;
   z-index: 10000;
@@ -446,5 +431,99 @@ select.status-select option {
   visibility: visible;
   opacity: 1;
   transition: opacity .15s;
+}
+/* #endregion */
+
+/* #region mediaQuery */
+@media (max-width: 460px) { /* 460px以下 */
+  /* hidden */
+  .hidden-sm-below {
+    display: none !important;
+  }
+
+  /* section */
+  .section {
+    margin-bottom: 0;
+    box-shadow: none;
+    border-bottom: 1px solid #eaeaea;
+    border-radius: 0;
+  }
+
+  /* alert */
+  .alert { 
+    margin: 0 !important;
+  }
+}
+@media (max-width: 698px) { /* 698px以下 */
+  /* hidden */
+  .hidden-md-below {
+    display: none;
+  }
+
+  /* section */
+  .section.section-hidden {
+    display: none;
+  }
+
+  /* list */
+  ul.list.list-flex {
+    display: flex;
+  }
+  ul.list.list-flex li {
+    border: none;
+    text-align: center;
+  }
+  ul.list.list-flex li:first-child:nth-last-child(1) ~ li,
+  ul.list.list-flex li:first-child:nth-last-child(1) {
+    width: 100%;
+  }
+  ul.list.list-flex li:first-child:nth-last-child(2) ~ li,
+  ul.list.list-flex li:first-child:nth-last-child(2) {
+    width: 50%;
+  }
+  ul.list.list-flex li:first-child:nth-last-child(3) ~ li,
+  ul.list.list-flex li:first-child:nth-last-child(3) {
+    width: 33.3333%;
+  }
+  ul.list.list-flex li:first-child:nth-last-child(4) ~ li,
+  ul.list.list-flex li:first-child:nth-last-child(4) {
+    width: 25%;
+  }
+  ul.list.list-flex li a {
+    padding: 10px 2px;
+    border-bottom: 0 solid transparent;
+    transition: background-color 0.2s, border-color 0.2s;
+    -moz-transition: background-color 0.2s, border-color 0.2s;
+    -webkit-transition: background-color 0.2s, border-color 0.2s;
+    -o-transition: background-color 0.2s, border-color 0.2s;
+    -ms-transition: background-color 0.2s, border-color 0.2s;
+  }
+  ul.list.list-flex li a:hover {
+    border-left: none;
+    border-bottom: 2px solid #999;
+  }
+  ul.list.list-flex li.active a {
+    border-left: none;
+    border-bottom: 2px solid #666;
+  }
+  ul.list.list-flex li span.right-icon {
+    float: none;
+  }
+  ul.list.list-flex li span.right-icon::before {
+    white-space: pre;
+    content: "\A";
+  }
+}
+@media (max-width: 960px) { /* 960px以下 */
+  /* hidden */
+  .hidden-lg-below {
+    display: none;
+  }
+}
+@media (min-width: 699px) { /* 699px以上 */
+  /* hidden */
+  .hidden-md-above {
+    display: none;
+  }
 }
 /* #endregion */
