--- a/public/css/style.css
+++ b/public/css/style.css
@@ -8,6 +8,7 @@ body {
   min-width: 320px;
   max-width: 9999px;
   height: 100%;
+  min-height: 640px;
   margin: 0;
   padding: 0;
   -webkit-overflow-scrolling: touch;
@@ -27,9 +28,6 @@ div.header-push {
 div.footer-push {
   height: 96px;
 }
-div.main {
-  min-height: 640px;
-}
 div.main:after {
   display: block;
 	clear: both;
@@ -43,11 +41,11 @@ div.main-inner {
   margin-left: 10px;
   margin-right: 10px;
 }
-div.sidebar {
+div.layout > div.sidebar {
   float: left;
   width: 240px;
 }
-div.content {
+div.layout > div.content {
   margin-left: 250px;
 }
 
@@ -163,7 +161,7 @@ button#avatar-button {
 button#avatar-button img {
   width: 32px;
   height: 32px;
-  /* border-radius: 100%; */
+  border-radius: 100%;
 }
 div.nav-dialog {
   display: none;
@@ -171,9 +169,9 @@ div.nav-dialog {
   top: 54px;
 	right: 2px;
   z-index: 1;
-  border: 1px solid #eeeeee;
-  box-shadow: 1px 1px 1px 1px #eeeeee;
-  background: #ffffff;
+  border: 1px solid #eee;
+  box-shadow: 1px 1px 1px 1px #eee;
+  background: #fff;
 }
 ul.dialog-group {
   list-style: none;
@@ -181,7 +179,7 @@ ul.dialog-group {
   padding: 4px 0;
 }
 ul.dialog-group:nth-child(n + 2) {
-	border-top: 1px solid #eeeeee;
+	border-top: 1px solid #eee;
 }
 li.dialog-item a {
   display: block;
@@ -287,11 +285,11 @@ div.copyright {
     content: "\A";
   }
 
-  div.sidebar {
+  div.layout > div.sidebar {
     float: none;
     width: 100%;
   }
-  div.content {
+  div.layout > div.content {
     margin-left: 0;
   }
 
